syntax = "proto3";
package nodes;

option go_package = "github.com/snple/kokomi/pb/nodes;nodes";

import "slot_message.proto";
import "generic_message.proto";

message SlotListRequest {
    pb.Page page = 1;
    // string device_id = 2;
    string tags = 3;
    string type = 4;
}

message SlotListResponse {
    pb.Page page = 1;
    uint32 count = 2;
    repeated pb.Slot slot = 3;
}

message SlotLinkRequest {
    string id = 1;
    sint32 status = 2;
}

message SlotPullRequest {
    int64 after = 1;
    uint32 limit = 2;
    // string device_id = 3;
    string type = 4;
}

message SlotPullResponse {
    int64 after = 1;
    uint32 limit = 2;
    repeated pb.Slot slot = 3;
}

service SlotService {
    rpc Create(pb.Slot) returns (pb.Slot) {}
    rpc Update(pb.Slot) returns (pb.Slot) {}
    rpc View(pb.Id) returns (pb.Slot) {}
    rpc Name(pb.Name) returns (pb.Slot) {}
    rpc Delete(pb.Id) returns (pb.MyBool) {}
    rpc List(SlotListRequest) returns (SlotListResponse) {}
    rpc Link(SlotLinkRequest) returns (pb.MyBool) {}
    rpc ViewWithDeleted(pb.Id) returns (pb.Slot) {}
    rpc Pull(SlotPullRequest) returns (SlotPullResponse) {}
    rpc Sync(pb.Slot) returns (pb.MyBool) {}
}
